package com.youkeda.application.art.member.model;

/**
 * 用户状态
 */
public enum UserStatus {
    /**
     * 可用
     */
    enabled,
    /**
     * 不可用
     */
    disabled,
    /**
     * 已经删除
     */
    deleted

}
